objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Banner_Image__c</fullName>
        <label>Banner Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_Link__c</fullName>
        <label>Product Image Link</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>IMAGE( Product_Image_Link__c ,&quot;&quot;,30,40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>